opção de alterar cor adicionada

--- a/robotron-2000/index.html
+++ b/robotron-2000/index.html
@@ -15,9 +15,9 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robot">
-            <img class="flechaDireita" src="./img/flecha.png">
-<img class="flechaEsquerda" src="./img/flecha.png">
+            <img class="robo" src="img/preto.png" alt="Robotron" id="robot">
+            <img id="flechaDireita" src="./img/flecha.png" data-flechas>
+<img id="flechaEsquerda" src="./img/flecha.png" data-flechas>
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
